Created first functional version of the plugin